Fabrix AIOps ML/9.0.0/Readme.md
This pack is designed for experimenting for Users:
 


### Quick Start Guide  
   
| Step | Description                                                                                                                                                                            |  
|----|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|  
| 1  | Activate the solution pack. After the Pack is in `ACTIVATED` status, use `Enable Single Tenant` menu option to enable the pack.                                                          |  
| 2  | Use `Launch Dashboard` menu option to navigate to the pack's dashboard. Note: For multi-tenant tenant environment, the pack specific dashboards will be available in Customer Ops page.  |
| 3  | Use `Credentials` ->  To add credentials used by experimental pipelines.                                                                                                                 |
| 4  | Use `Pipelines` -> To view published experimental pipelines.                                                                                                                             |
| 5  | Use `Experiments` ->  To create experiments for `Regression`, `Clustering` and `Classification`.                                                                                         |   
                                                                                           
